agregado de grad

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </main>
     <footer class="footer">
       <div class="conteiner"> 
-        <h4>buscanos en las redes</h4>
+        <h4>Buscanos en las Redes</h4>
        <div class="footer-icon">        
         <i class="fa-brands fa-facebook-square"></i>
         <i class="fa-brands fa-instagram-square"></i>
