--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
                   <img src="Imagenes/imgInicio.jpg" />
               </div>
               <h1>Limpieza Profecional</h1>
-               <div class="row">
-                 <div class="img-inicio">             
-                 <div class="col-img">
-                   <div class="img-menu">
+              <div class="row">
+                <div class="img-inicio">             
+                <div class="col-img2">
+                <div class="img-menu">
                   <img src="Imagenes/home.png" />
                 </div>
                   <h3>Hogar</h3>
                 </div>
-                <div class="col-img">
+                <div class="col-img2">
                   <div class="img-menu">
                   <img src="Imagenes/car.jpeg" />
                 </div>
                   <h3>Autos</h3>
                 </div>
-                <div class="col-img">
+                <div class="col-img2">
                   <div class="img-menu">
                     <img src="Imagenes/desinfeccion.jpg" />
                   </div>                  
                   <h3>Desinfeccion</h3>
                 </div>
-                <div class="col-img">
+                <div class="col-img2">
                   <div class="img-menu">
                   <img src="Imagenes/produc.jpeg" />
                 </div>
