--- a/contacto.html
+++ b/contacto.html
@@ -15,64 +15,61 @@
   <body>
     <header>
       <div class="conteiner">
-        <div class="row">
-          <div class="nav__logo">
+          <div class="row">
+            <div class="nav__logo">
             <a href="Index.html" class="logo">
-              <img src="Imagenes/logo2.png" />
-            </a>
+            <img src="Imagenes/logo2.png" />
+           </a>
           </div>
-          <nav class="nav">
+          <nav class="nav">            
             <ul class="nav__list">
-              <div class="nav__link">
-                <li class="nav__item">
-                  <a href="index.html">Inicio</a>
-                </li>
-                <li class="nav__item">
-                  <a href="servicios.html">Servicios</a>
-                </li>
-                <li class="nav__item">
-                  <a href="productos.html">Productos</a>
-                </li>
-                <li class="nav__item">
-                  <a href="empresa.html">Empresa</a>
-                </li>
-                <li class="nav__item">
-                  <a href="contacto.html">Contactos</a>
-                </li>
+              <li class="nav__item">
+                <a class="nav__link" href="index.html">Inicio</a></li>
+              <li class="nav__item">
+                <a class="nav__link" href="servicios.html">Servicios</a></li>
+              <li class="nav__item">
+                <a class="nav__link" href="productos.html">Productos</a></li>
+              <li class="nav__item">
+                <a class="nav__link" href="empresa.html">Empresa</a></li>
+              <li class="nav__item">
+                <a class="nav__link" href="contacto.html">Contactos</a></li>
               </div>
             </ul>
           </nav>
         </div>
-      </div>
+      </div>      
     </header>
     <main>
     <section class="intro-section">
-      <div class="conteinter">
+      <div class="conteiner">
+        <div class="cont-form">
+        
         <div class="form">
       <form  action="">
         <div>
           <h1>Contactenos</h1>
         </div>
-        <div>
-          
+        <div>          
           <label for="nombre">Nombre: </label>
           <input type="text" name="Nombre" id="nombre" required />
           <br>
           <label for="email">Email: </label>
           <input type="email" name="email" id="email" required />
-         <br>
+          <br>
           <label for="telefono">Telefono: </label>
           <input type="number" name="Telefono" id="telefono" required />
           <br>
           <label for="mensaje">Mensaje: </label>
           <br>
           <textarea name="mensaje" id="mensaje" cols="30" rows="10"> </textarea>
-        <br>
+          <br>
           <input type="submit" value="Enviar" />
           <input type="reset" value="Limpiar Formulario" />
         </div>      
       </form>
     </div>
+  </div>
+</div>
     </section>
   </main>
     <footer class="footer">
