--- a/productos.html
+++ b/productos.html
@@ -15,35 +15,29 @@
   <body>
     <header>
       <div class="conteiner">
-        <div class="row">
-          <div class="nav__logo">
+          <div class="row">
+            <div class="nav__logo">
             <a href="Index.html" class="logo">
-              <img src="Imagenes/logo2.png" />
-            </a>
+            <img src="Imagenes/logo2.png" />
+           </a>
           </div>
-          <nav class="nav">
+          <nav class="nav">            
             <ul class="nav__list">
-              <div class="nav__link">
-                <li class="nav__item">
-                  <a href="index.html">Inicio</a>
-                </li>
-                <li class="nav__item">
-                  <a href="servicios.html">Servicios</a>
-                </li>
-                <li class="nav__item">
-                  <a href="productos.html">Productos</a>
-                </li>
-                <li class="nav__item">
-                  <a href="empresa.html">Empresa</a>
-                </li>
-                <li class="nav__item">
-                  <a href="contacto.html">Contactos</a>
-                </li>
+              <li class="nav__item">
+                <a class="nav__link" href="index.html">Inicio</a></li>
+              <li class="nav__item">
+                <a class="nav__link" href="servicios.html">Servicios</a></li>
+              <li class="nav__item">
+                <a class="nav__link" href="productos.html">Productos</a></li>
+              <li class="nav__item">
+                <a class="nav__link" href="empresa.html">Empresa</a></li>
+              <li class="nav__item">
+                <a class="nav__link" href="contacto.html">Contactos</a></li>
               </div>
             </ul>
           </nav>
         </div>
-      </div>
+      </div>      
     </header>
     <mAin>
     <section class="intro-section">
