--- a/empresa.html
+++ b/empresa.html
@@ -18,8 +18,7 @@
           <div class="row">
             <div class="nav__logo">
             <a href="Index.html" class="logo">
-            <img src="Imagenes/logo2.png" />
-           </a>
+            <img src="Imagenes/logo2.png" /> </a>
           </div>
           <nav class="nav">            
             <ul class="nav__list">
